name:    afv
version: 0.2.0

category: Embedded, Formal Methods

synopsis: Infinite state model checking of iterative C programs.

description: AFV is an infinite state model checker that
             verifies iterative C programs by k-induction.
             AFV uses Yices as the backend SMT solver.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

executable afv
  hs-source-dirs:   src

  main-is:          AFV.hs

  other-modules:    Compile,
                    Error,
                    Model,
                    Utils,
                    Verify

  build-depends:
    base          >= 4       && < 5,
    bytestring    >= 0.9     && < 1.0,
    mtl           >= 1.1     && < 1.2,
    directory     >= 1.0     && < 1.1,
    process       >= 1.0     && < 1.1,
    language-c    >= 0.3.2   && < 0.4,
    yices         >= 0.0.0.7 && < 0.0.1

  ghc-options:  -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/afv.git

